Add a Graalvm native image client.